fixed client card photo and name spacing

--- a/style.css
+++ b/style.css
@@ -250,11 +250,12 @@ input {
 
 .client-card {
     width: 30%;
-    padding: 2%;
+    padding: 2% 2% 3% 2%;
     display: grid;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 2fr;
-    row-gap: 15%;
+    row-gap: 12%;
+    column-gap: 5%;
     background-color: #ffffff;
     box-shadow: 0 0 10px #f1f1f1;
     
@@ -279,12 +280,14 @@ input {
     grid-row: 2;
     grid-column: 1;
     margin-left: 20%;
+    align-self: center;
     
 }
 
 .client-card-name {
     grid-row: 2;
     grid-column: 2;
+    align-self: center;
 }
 
 .footer-list {
@@ -301,7 +304,7 @@ input {
     color: #ffffff;
     font-weight: 400;
     margin-bottom: 3%;
-    padding-right: 4%;
+    padding-right: 8%;
 }
 
 .footer-list ul {
@@ -601,7 +604,7 @@ input {
 }
 
 #services h3{
-    padding-right: 12%;
+    padding-right: 18%;
 }
 
 #follow-me {
@@ -759,6 +762,10 @@ input {
         grid-row: 6 / span 3;
         grid-column: 2;
        
+    }
+
+    #clients-container{
+        width: 95%;
     }
 
     #work-with-me{
